// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title matches snapshot when does not have margins 1`] = `
.css-17thm8e-Title__root-Title__h1-Title__noMargin {
  color: #172b4e;
  font-weight: 300;
  font-size: 3.4rem;
  margin-top: 0;
  margin-bottom: 0;
}

@media only screen and (max-width:768px) {
  .css-17thm8e-Title__root-Title__h1-Title__noMargin {
    font-size: 2.8rem;
  }
}

<h1
  className="css-17thm8e-Title__root-Title__h1-Title__noMargin"
>
  Title content
</h1>
`;

exports[`Title matches snapshot when has a h1 size 1`] = `
.css-jn5qyg-Title__root-Title__h1 {
  color: #172b4e;
  font-weight: 300;
  font-size: 3.4rem;
}

@media only screen and (max-width:768px) {
  .css-jn5qyg-Title__root-Title__h1 {
    font-size: 2.8rem;
  }
}

<h1
  className="css-jn5qyg-Title__root-Title__h1"
>
  Title content
</h1>
`;

exports[`Title matches snapshot when has a h2 size 1`] = `
.css-1d267us-Title__root-Title__h2 {
  color: #172b4e;
  font-weight: 300;
  font-size: 2.4rem;
}

@media only screen and (max-width:768px) {
  .css-1d267us-Title__root-Title__h2 {
    font-size: 2rem;
  }
}

<h2
  className="css-1d267us-Title__root-Title__h2"
>
  Title content
</h2>
`;

exports[`Title matches snapshot when has a h3 size 1`] = `
.css-eqynv4-Title__root-Title__h3 {
  color: #172b4e;
  font-weight: 300;
  font-size: 2rem;
}

@media only screen and (max-width:768px) {
  .css-eqynv4-Title__root-Title__h3 {
    font-size: 1.6rem;
  }
}

<h3
  className="css-eqynv4-Title__root-Title__h3"
>
  Title content
</h3>
`;

exports[`Title matches snapshot when has a h4 size 1`] = `
.css-ucdkco-Title__root-Title__h4 {
  color: #172b4e;
  font-weight: 300;
  font-size: 1.3rem;
  font-weight: 400;
}

@media only screen and (max-width:768px) {
  .css-ucdkco-Title__root-Title__h4 {
    font-size: 1.1rem;
  }
}

<h4
  className="css-ucdkco-Title__root-Title__h4"
>
  Title content
</h4>
`;

exports[`Title matches snapshot when has a node as children 1`] = `
.css-1d267us-Title__root-Title__h2 {
  color: #172b4e;
  font-weight: 300;
  font-size: 2.4rem;
}

@media only screen and (max-width:768px) {
  .css-1d267us-Title__root-Title__h2 {
    font-size: 2rem;
  }
}

<h2
  className="css-1d267us-Title__root-Title__h2"
>
  <span
    style={
      Object {
        "fontWeight": 500,
      }
    }
  >
    Some 
  </span>
   content
</h2>
`;
